fix(style): prevented scrollbars

--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    margin: 0;
 }
 
 /* A button, or something pretending to be */
